--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ body{
     align-content:center; 
     position: absolute;
     top: 10;
+    cursor: pointer;
     
   }
   .box1 div{ 
@@ -124,6 +125,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    cursor: pointer;
     
 
   }
